# tools-of-the-NLP

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
nldate/: parser.py
src/nldate/: parser.py
tests/: test_nldate.py
