[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nldate"
version = "0.1.0"
description = "Natural-language date parser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["nldate*"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.13",
    "mypy>=1.15.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
